# alla-allure-analyzer-claude

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  docker-entrypoint.sh  pyproject.toml
.claude/: launch.json
alla-skill/: .env.example  README.md  SKILL.md  pyproject.toml
alla-skill/prompts/: cluster_analysis.md  launch_summary.md
alla-skill/references/: analysis_schema.md  cluster_analysis_guide.md  delegation_strategy.md  launch_summary_guide.md  qwen_subagents.md  troubleshooting.md  workflow.md
alla-skill/scripts/: _common.py  delete_comments.py  feedback_resolve.py  fetch_clusters.py  generate_report.py  get_cluster_context.py  get_summary_context.py  manage_kb.py  manage_merge_rules.py  push_to_testops.py  record_feedback.py  resolve_launch.py  serve.py  submit_analysis.py
alla-skill/sql/: skill_run_schema.sql
docs/: USER_GUIDE.md
knowledge_base/: entries.yaml
sql/: kb_feedback_schema.sql  kb_schema.sql  kb_seed.sql  merge_rules_schema.sql  setup_kb.py
tests/: conftest.py  test_agent_analysis_adapter.py  test_alla_api_client.py  test_app_support_feedback.py  test_attachment_handlers.py  test_auth.py  test_cli_clustering_output.py  test_cli_output.py  test_clustering_service.py  test_comment_delete_service.py  test_config.py  test_dashboard.py  test_gigachat_client.py  test_html_report.py  test_kb_push_service.py  test_kb_query_visibility.py  test_kb_slug.py  test_langflow_client.py  test_llm_models.py  test_llm_rate_coordinator.py  test_llm_service.py  test_log_extraction_service.py  (+14 more)
(+78 files in other folders)
